--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,235 +1,458 @@
 body {
-    margin: auto;
-    background-image: url("../images/brickwall/brickwall_@2X.png");
-    background-color:lightgray;
-    font-family: "Work Sans", sans-serif;
-    font-weight: 300;
-}
-
-.wrapper {
-     background-color:#1D2F3E;
-     width: 100%;
-     padding-top:1em;
-}
-
-h1 {
-    float: left;    
-    margin-top: -15.9px;
-    margin-left: 280px;
-    background-color: #4aaaa5;
-    color:white;
-    border: 30px solid #4aaaa5;
-    text-align: center;
-    font-size:27px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-
-    }
-
-
-nav {
-    margin-left: 578px;
-    margin-bottom: 80px;
-}
-
-header {
-    background-color: #55d6aa;
-    position: relative;
-}
-
-/*header::after {
-    content: **;
-    display: table;
-    clear: both;
-}*/
-
-nav ul {
-    background-color:#1D2F3E;
-    list-style-type: none;
-    
-    padding-right:26px;
-    padding-left:360px;
-}
-
-nav li {
-    display: inline-block;
-    margin-top: 10px;
-    margin-bottom: 28px;
-    margin-left: 11px;
-    margin-right: 35px;
-    position: relative;
-}
-
-nav a {
-    color:gray;
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 15px;
-    margin-right: 20px;
-    float:left;
-    
-}
-
-nav a:hover {
-    color: #4aaaa5;
-}
-
-nav a:active {
-    color: #4aaaa5;
-}
-
-
- nav a:hover::before{
-    width: 100%;
-} 
-
- a ::after{
-    width: 100%;
-    color:#0F9FB4;
-}
-  
-img {    
-    padding-top: 1.5em;
-    padding-left: 5em;
-    padding-right: 2em;
-    padding-bottom: 0em;
-    float: left;
-}
-
-hr {
-    width: 795px;
-    background-color:#1D2F3E;
-    font-style: oblique;
-    height: 1px;
-}
-h2 {
-    color:#1D2F3E;
-    padding:0.5em;
-    margin-left: 70px; 
-    margin-top:28px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 27px;
-}
-
-.container {
-    width:  960px;
-    box-sizing: border-box;
-    background-color:#C9E1C1;
-    border: solid 1px #666666;
-    margin: auto;
-    padding-bottom: 1.5em; 
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    background: url("../images/concrete_seamless.png");
   }
-
-p {
-    width:800px;
-     margin: auto;
-     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     color: #1D2F3E;
-     padding-top: 1em;
-     line-height: 25px;
- }
-
-textarea {
-    background:#eeee;
-    
-    font-size: 20px;
-    
-    list-style-type: none;
-    width: 799px;
-    
-}
-
-  textarea ul {
-    list-style-type: none;
-}
-
-footer {
-    background-color:#1D2F3E;
-    border-top:5px #4aaaa5 solid ;
-    margin-top: 165px;
-    position:inherit;
-}
-
-#contact-info li {
-    list-style-type: none;
-    color: #777777;
-    margin-bottom: 8px;
-}
-
-.footer-wrapper {
-    position: relative;
-    padding-top: 20px;
-}
-
-form {
-    display: block;
-    margin-top: 0em;
-}
-footer p{
-    color: gray;
-    padding-left:45%;
-    position: relative;
-    }
-
-table {
-    width:945px;
-    display: table;
-    border-collapse: separate;
-    border-spacing: 2px;
-    padding: 0.5em;
-    
-}
-    
-tr {
-    padding-top: 1.2em;
-    padding-right: 4.2em;
-    padding-bottom: 1.2em;
-    padding-left: 2.7em;
-    vertical-align: inherit;
-    margin: 12px;
-    
-}
-
-.profile-image {
-    display: table-cell;
-    padding: 0em;
-    
-}
-
-td {
-    
-    display: table-cell;
-    vertical-align: inherit;
-    padding: 3.5em;
-    padding-top: 1.5em;
-    padding-right: 4.5em;
-    padding-bottom: 1.5em;
-    padding-left: 3em;
-}
-
-.contact-form {
- margin:40px;
-}
-
-.button {
-    background-color: #4aaaa5;
-    border: none;
-    color: white;
-    padding: 20px 30px;
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* general */
+  
+  .container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  
+  h1,
+  h2,
+  h3,
+  p {
+    margin-bottom: 20px;
+  }
+  
+  p:last-child {
+    margin-bottom: 0;
+  }
+  
+  h1,
+  h2,
+  h3 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
+    color: #4aaaa5;
+  }
+  
+  h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid #ddd;
+  }
+  
+  h2,
+  h3 {
+    font-size: 22px;
+  }
+  
+  /* header */
+  
+  #masthead {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: #fff;
+    background: #fff;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  #logo {
+    float: left;
+    width: 250px;
+    height: 90px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #fff;
     text-align: center;
     text-decoration: none;
+    background: #4aaaa5;
+  }
+  
+  nav {
+    float: right;
+    margin-top: 25px;
+  }
+  
+  nav a {
     display: inline-block;
-    font-size: 16px;
-    margin-left: 79px;
-}
-
-.text-profile-image p {
-        margin: auto;
-        padding-top: 8em;
-        background-color: #152737;
-        padding-left: 82px;
-        padding-right: 75.6px;
-        width: 42px;
-        color:#0FB493;
-      
-}
-
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: #999;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+  }
+  
+  nav a:first-child {
+    border-left: 0 none;
+  }
+  
+  /* footer */
+  
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: #666;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+  }
+  
+  h3, h2 {
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid #eee;
+  }
+  
+  /* main */
+  
+  #main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+  }
+  
+  .main-section {
+    float: left;
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
+  }
+  
+  /* portfolio page */
+  
+  .work {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+  }
+  
+  .work:nth-child(even) {
+    margin-right: 40px;
+  }
+  
+  .work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+  }
+  
+  .work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #fff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+  }
+  
+  .auth-image {
+    float: left;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+  }
+  
+  /* contact page */
+  
+  #contact-form ul {
+    margin-bottom: 20px;
+  }
+  
+  #contact-form li {
+    margin-bottom: 10px;
+  }
+  
+  label,
+  input[type=text],
+  input[type=email],
+  textarea {
+    display: block;
+    width: 100%;
+  }
+  
+  input[type=text],
+  input[type=email],
+  textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+  }
+  
+  textarea {
+    height: 200px;
+  }
+  
+  input[type=submit] {
+    padding: 10px 30px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
+    background: #4aaaa5;
+    border: 0 none;
+  }
+  
+  body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777;
+    background: url("../images/concrete_seamless.png");
+  }
+  
+  * {
+    box-sizing: border-box;
+    margin: 0;
+  }
+  
+  /* sticky footer styling */
+  
+  /* https://css-tricks.com/snippets/css/sticky-footer/ */
+  
+  html,
+  body {
+    height: 100%;
+  }
+  
+  .wrapper {
+    height: auto !important;
+    height: 100%;
+    min-height: 100%;
+    margin: 0 auto -105px;
+  }
+  
+  footer,
+  .push {
+    height: 105px;
+  }
+  
+  /* end sticky footer styling */
+  
+  /* start hover styling */
+  
+  #logo:hover,
+  input[type=submit]:hover {
+    background: #5e7f7e;
+  }
+  
+  nav a:hover {
+    color: #5e7f7e;
+  }
+  
+  .social:hover {
+    cursor: pointer;
+    opacity: 0.8;
+  }
+  
+  /* end hover styling */
+  
+  /* general styling */
+  
+  .container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
+  }
+  
+  h1,
+  h2,
+  h3,
+  p {
+    margin-bottom: 20px;
+  }
+  
+  p:last-child {
+    margin-bottom: 0;
+  }
+  
+  h1,
+  h2,
+  h3 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
+    color: #4aaaa5;
+  }
+  
+  h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid #ddd;
+  }
+  
+  h2,
+  h3 {
+    font-size: 22px;
+  }
+  
+  /* header */
+  
+  #masthead {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: #fff;
+    background: #fff;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  #logo {
+    float: left;
+    width: 250px;
+    height: 90px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    background: #4aaaa5;
+  }
+  
+  nav {
+    float: right;
+    margin-top: 25px;
+  }
+  
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: #999;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+  }
+  
+  nav a:first-child {
+    border-left: 0 none;
+  }
+  
+  /* footer */
+  
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: #666;
+    border-top: 8px solid #4aaaa5;
+  }
+  
+  /* sidebar */
+  
+  .sidebar {
+    float: right;
+    width: 100%;
+    max-width: 270px;
+    padding: 30px;
+    margin-bottom: 20px;
+    background: #fff;
+    border: 1px solid #ddd;
+  }
+  
+  h3,
+  .sidebar h2 {
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid #eee;
+  }
+  
+  .social {
+    width: 62px;
+    height: 62px;
+    margin-top: 8px;
+    margin-right: 5px;
+  }
+  
+  .social:last-child {
+    margin-right: 0;
+  }
+  
+  /* main */
+  
+  #main-container {
+    padding-top: 130px;
+  }
+  
+  .main-section {
+    float: left;
+    width: 100%;
+    max-width: 650px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
+  }
+  
+  /* contact page */
+  
+  #contact-form ul {
+    margin-bottom: 20px;
+  }
+  
+  #contact-form li {
+    margin-bottom: 10px;
+  }
+  
+  label,
+  input[type=text],
+  input[type=email],
+  textarea {
+    display: block;
+    width: 100%;
+  }
+  
+  input[type=text],
+  input[type=email],
+  textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+  }
+  
+  textarea {
+    height: 200px;
+  }
+  
+  input[type=submit] {
+    padding: 10px 30px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
+    background: #4aaaa5;
+    border: 0 none;
+  }
+  
