need to add image to media querie area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,13 @@ nav a:first-child {
   border-left: 0 none;
 }
 
+#bio-image {
+  padding-top: 0.5em;
+  padding-left: 0em;
+  padding-right: 1em;
+  padding-bottom: 0em;
+  float: left;
+}
 /* footer */
 
 footer {
