--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,7 @@ input[type=submit] {
 
   #bio-image{
   width:100%;
+  height:auto;
   }
 }
 
@@ -288,6 +289,8 @@ input[type=submit] {
   }
   #bio-image{
     width:100%;
+    height:auto;
+    
     }
 }
 
@@ -318,5 +321,6 @@ padding:0;
   }
   #bio-image{
     width:100%;
+    height:auto;
     }
 }
